Re-arrange date input bar

--- a/templates/birthday.html
+++ b/templates/birthday.html
@@ -21,8 +21,10 @@
     </tbody>
 </table>
 
+<br>Enter in Birthday:
+<br>
+<br>
 <form action="/birthday">
-    <label for="birthday">Enter in Birthday:</label>
     <input type="date" id="birthday" name="birthday">
     <input type="submit" value="Submit">
   </form>
