--- a/templates/today.html
+++ b/templates/today.html
@@ -18,9 +18,9 @@
     {% endfor %}
     </tbody>
 </table>
- 
+<h5>Enter in Birthday:<h5>
 <form action="/birthday" method="post">
-    <label for="birthday">Enter in Birthday:</label>
+
     <input type="date" id="birthday" name="birthday">
     <input type="submit" value="Submit">
 </form>
