fixed spelling on about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,7 @@
 <br><br>
 <p>This website is my Final Project for <a href = "https://www.edx.org/course/cs50s-introduction-to-computer-science">CS50 Edx Course 2020.</a> 
 <br>    
-<p>My goal was to create a website that would show a user their "Flordia Man Horoscope", which I had learned about years back. A Flordia Man Horoscope is created by 
+<p>My goal was to create a website that would show a user their "Florida Man Horoscope", which I had learned about years back. A Florida Man Horoscope is created by 
     typing in your date of birth into Google + <a href="http://letmegooglethat.com/?q=Dec+30+florida+man">"Florida Man"</a> and the list of headlines that return are your horoscope. 
     (Here's an <a href="https://greatscottcodes.herokuapp.com/random">example</a>.)</p>
 
