--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,9 +10,8 @@
         
         <!-- https://favicon.io/emoji-favicons/money-mouth-face/ -->
         <link href="/static/favicon.ico" rel="icon">
-
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-        <link href="/static/styles.css" rel="stylesheet">
+        <link href="/static/css/styles.css">
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -51,16 +50,17 @@
         {% endwith %}
 
         {% with messages = get_flashed_messages(category_filter=["error"]) %}
-          {% if messages %}
-            {% for message in messages %}
-                  <header>
-                    <div class="alert alert-danger border text-center" role="alert">
-                        {{ get_flashed_messages() | join(" ") }}
-                    </div>
-                </header>
-            {% endfor %}
-          {% endif %}
-        {% endwith %}
+        {% if messages %}
+          {% for message in messages %}
+                <header>
+                  <div class="alert alert-danger border text-center" role="alert">
+                      {{ get_flashed_messages() | join(" ") }}
+                  </div>
+              </header>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
+
           <main class="container p-5">
               {% block main %}{% endblock %}
           </main>
