--- a/templates/today.html
+++ b/templates/today.html
@@ -19,11 +19,11 @@
     {% endfor %}
     </tbody>
 </table>
-<br>Enter in Birthday:
 <br>
 <br>
 <form action="/birthday" method = "post">
-    <input type="date" id="birthday" name="birthday">
+    <label for="birthday">Enter in Birthday:</label><br>
+    <input type="date" id="birthday" name="birthday"><br>
     <input type="submit" value="Submit">
   </form>
 
