--- a/templates/today.html
+++ b/templates/today.html
@@ -25,7 +25,8 @@
     <label for="birthday">Enter in Birthday:</label><br>
     <input type="date" id="birthday" name="birthday"><br>
     <input type="submit" value="Submit">
-  </form>
+  </form><br>
+  <p>Safari Desktop Users: Input date as YY-MM-DD</p>
 
 {% endblock %}
 
