fixed profile picture on about page to local file

--- a/templates/about.html
+++ b/templates/about.html
@@ -7,8 +7,8 @@
 {% block main %}
 
 <h5>So What Is This Thing Exactly?</h5>
-<img src="https://pbs.twimg.com/profile_images/1189570815840280578/jgLGCImD_400x400.jpg"
-  alt="Yep, that's me!" style = "width:200px;height:200px;" class = "resonsive"/>
+<img src=".././static/./images/seattle_pic.jpg"
+  alt="Yep, that's me!" width = "200px" height = "auto" class = "resonsive"/>
 <br><br>
 <p>This website is my Final Project for <a href = "https://www.edx.org/course/cs50s-introduction-to-computer-science">CS50 Edx Course 2020.</a> 
 <br>    
