update future site colors

--- a/static/css/consants.css
+++ b/static/css/consants.css
@@ -4,5 +4,6 @@
     --site-cyan: #01BAEF;
     --site-white: #FBFBFF;
     --site-black: #040F16;
-
 }
+
+/* Color reference: https://coolors.co/cf1259-0b4f6c-01baef-fbfbff-040f16 */
