--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,27 +3,23 @@
 <head>
   <title>Florida Man Horoscope</title>
   <link ref="style"    
-        <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- documentation at http://getbootstrap.com/docs/4.1/, alternative themes at https://bootswatch.com/ -->
-        
-        <!-- https://favicon.io/emoji-favicons/money-mouth-face/ -->
         <link href="/static/favicon.ico" rel="icon">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-        <link href="/static/css/styles.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/style.css">
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </head>
     <body>
         <h1>Florida Man Horoscope</h1>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
+              <ul class="navbar-nav mr-auto nav-fill w-100">
                 <li class="nav-item active">
                   <a class="nav-link" href="/today">Today</a></li>
                 <li class="nav-item active">
@@ -61,7 +57,7 @@
         {% endif %}
       {% endwith %}
 
-          <main class="container p-5">
+          <main class="container p-4">
               {% block main %}{% endblock %}
           </main>
     </body>
