--- a/templates/today2.html
+++ b/templates/today2.html
@@ -5,28 +5,31 @@
 {% endblock %}
 
 {% block main %}
-
-<h3>Flordia Man Horoscopes for {{month}} - {{day}}:</h3>
+<div class="container">
+    <h3>Flordia Man Horoscopes for {{month}} - {{day}}:</h3>
+</div>
 <br>
-<table class = "table">
-    <thead>
-        <tr></tr>
-    </thead>
-    <tbody>
-    {% for query in querys%}
-        <tr>
-            <th scope="row">
-                <td>
-                    <a href = "{{ query[1] }}">Link</a>
-                </td>
-                <td>
-                    {{ query[0].title() }}  
-                </td>
-            </th>
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
+<div class="container">
+    <table class = "table">
+        <thead>
+            <tr></tr>
+        </thead>
+        <tbody>
+        {% for query in querys%}
+            <tr>
+                <th scope="row">
+                    <td>
+                        <a href = "{{ query[1] }}">Link</a>
+                    </td>
+                    <td>
+                        {{ query[0].title() }}  
+                    </td>
+                </th>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
 <br>
 <br>
 <form action="/birthday" method = "post">
