reworking date submit form

--- a/templates/today2.html
+++ b/templates/today2.html
@@ -39,6 +39,19 @@
   </form><br>
   <p>Safari Desktop Users: Input date as YY-MM-DD</p>
 
+
+<form name="monthDayform" id="monthDayform" action="">
+    M: <select name="monthrange" id="monthrange">
+        <option value="" selected="selected">Month:</option>
+      </select>
+      <br><br>
+    D: <select name="dayrange" id="dayrange">
+        <option value="" selected="selected">Day</option>
+      </select>
+      <br><br>
+    <input type = "submit" value = "M/D Submit">
+</form>
+
 {% endblock %}
 
 
