--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+        <script src="/static/js/script.js"></script>
 </head>
     <body>
         <h1>Florida Man Horoscope</h1>
