--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,14 @@
     --site-cyan: #01BAEF;
     --site-white: #FBFBFF;
     --site-black: #040F16;
+
+    /* Second iteration of colors, more oceany*/
+    --site-dark-orange: #ff5400;
+    --site-light-orange: #ff8500;
+    --site-orange-peel: #ff9e00;
+    --site-crystal: #00b4b8;
+    --site-dark-crystal: #0077b6;
+    --site-navy-blue: #03045E;
 }
 
 /* navbar */
@@ -15,8 +23,14 @@
 
 /* Title */
 h1 {
-    text-align: center; 
+    text-align: center;
+    background-color: white;
 }
+
+#title {
+    background-color: white;
+}
+
 
 /* main body */
 
@@ -48,6 +62,10 @@ main table {
     text-align: left;
 }
 
+#results {
+    background-color: white;
+}
+
 table
 {
     border-collapse: collapse;
@@ -74,7 +92,7 @@ body
     line-height: 1.5;
     color: #212529;
     text-align: left;
-    background-color: #fff;
+    background-color: var(--site-dark-crystal);
 }
 
 /* scroll */
