--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,7 +14,9 @@
         <script src="/static/js/script.js"></script>
 </head>
     <body>
-        <h1>Florida Man Horoscope</h1>
+        <div class="container">
+          <h1>Florida Man Horoscope</h1>
+        </div>
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
