--- a/templates/today2.html
+++ b/templates/today2.html
@@ -6,10 +6,10 @@
 
 {% block main %}
 <div class="container">
-    <h3>Flordia Man Horoscopes for {{month}} - {{day}}:</h3>
+    <h3 id = "title">Flordia Man Horoscopes for {{month}} - {{day}}:</h3>
 </div>
 <br>
-<div class="container">
+<div class="container" id = "results">
     <table class = "table">
         <thead>
             <tr></tr>
