--- a/templates/layout_v2.html
+++ b/templates/layout_v2.html
@@ -29,6 +29,19 @@
                   <a class="nav-link" href="/random">Random</a>
                 </li>
                 <li class="nav-item active">
+                  <!-- <a class="nav-link" href="#">Serach</a> -->
+                  <!-- Insert birthday form here -->
+                    <form name="birthday2" id="form1" action ="/birthday2" method = "POST">
+                      <select name="month" id="month">
+                              <option value="" selected="selected">Month</option>
+                      </select>
+                      <select name="day" id="day">
+                          <option value="" selected="selected">Day</option>
+                      </select>
+                        <input type="submit" value="Search Birthday">  
+                    </form>
+                </li>
+                <li class="nav-item active">
                   <a class="nav-link" href="/about">About</a>
                 </li>
               </ul>
