almost got everything working, just need the form

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
     --site-red: #cf1259;
     --site-blue-sapphire: #0b4f6c;
     --site-cyan: #01BAEF;
@@ -6,13 +6,13 @@
     --site-black: #040F16;
 
     /* Second iteration of colors, more oceany*/
-    --site-dark-orange: #ff5400;
+    /* --site-dark-orange: #ff5400;
     --site-light-orange: #ff8500;
     --site-orange-peel: #ff9e00;
     --site-crystal: #00b4b8;
     --site-dark-crystal: #0077b6;
-    --site-navy-blue: #03045E;
-}
+    --site-navy-blue: #03045E; */
+/* }  */
 
 /* navbar */
 
@@ -96,7 +96,7 @@ body
     line-height: 1.5;
     color: #212529;
     text-align: left;
-    background-color: var(--site-dark-crystal);
+    /* background-color: var(--site-dark-crystal); */
 }
 
 /* scroll */
@@ -124,5 +124,8 @@ input[type="date"]
     margin: 8px 0;
 }
 
+/* About Page */
 
-
+.tools li {
+    text-align: left;
+}
