--- a/templates/about.html
+++ b/templates/about.html
@@ -18,14 +18,14 @@
 
 <p>To accomplish this I built a <a href="https://en.wikipedia.org/wiki/Web_scraping">web-scraper</a> that would search for 'Florida Man' headlines and save the results from every day of the year (including leap year). I put those results into a database and any user can query them while searching the website.</p>
 <p>Tools I used to create website:</p>
-<ul>
-    <li>Python (<a href = "https://www.python.org/">link</a>)</li>
-    <li>Sqlite3 (<a href = "https://www.sqlite.org/index.html">link</a>)</li>
-    <li>Flask (<a href = "https://flask.palletsprojects.com/en/1.1.x/">link</a>)</li>
-    <li>Heroku (<a href = "https://dashboard.heroku.com/">link</a>)</li>
-    <li>VS Code (<a href = "https://code.visualstudio.com/">link</a>)</li>
+<ul id = "tools">
+    <li style = "list-style: none;">Python (<a href = "https://www.python.org/">link</a>)</li>
+    <li style = "list-style: none;">Sqlite3 (<a href = "https://www.sqlite.org/index.html">link</a>)</li>
+    <li style = "list-style: none;">Flask (<a href = "https://flask.palletsprojects.com/en/1.1.x/">link</a>)</li>
+    <li style = "list-style: none;">Heroku (<a href = "https://dashboard.heroku.com/">link</a>)</li>
+    <li style = "list-style: none;">VS Code (<a href = "https://code.visualstudio.com/">link</a>)</li>
 </ul>
-<p>Thanks to all the mods and students from CS50 Discord who helped me along the way!</p>
+<p>Thanks to all the mods and students from <a href = "https://discord.com/invite/cs50">CS50 Discord</a> who helped me along the way!</p>
 {% endblock %}
 
 
