--- a/templates/form.html
+++ b/templates/form.html
@@ -11,8 +11,6 @@ window.onload = function() {
   var monthSel = document.getElementById("month");
   var daySel = document.getElementById("day");
   var submitButton = document.getElementById("submit-button");
-  var daySearch = "";
-  var monthSearch = "";
   
   // Establish subject dropdown menu
   for (var x in monthObject) {
@@ -20,7 +18,10 @@ window.onload = function() {
   }
   monthSel.onchange = function() {
     daySel.length = 1; // Reset day options to base
-
+    console.log('Month Value: ',monthSel.value)
+    if (!(submitButton.hasAttribute('disabled'))) { // If submit button is not disabled
+      submitButton.setAttribute("disabled","");
+    }
 
     // Display correct days per month
     var daysinMonth = monthObject[monthSel.value];
@@ -29,30 +30,15 @@ window.onload = function() {
     }
   }
 
-  // When daySel change, 
-  daySearch.onchange = function () {
-    console.log('Month Selected:', monthSearch );
-    console.log("Day Selected:", daySearch);
-  }
-}
-
-// Check when options are selected, if both non deafult and then activate 
-
-function enableSubmit() {
-  var monthSel = document.getElementById("month");
-  var daySel = document.getElementById("day");
-  
-// On month or day dropdown change
-// Enable submit button if valid options select
-  console.log('selection changing!')
-  monthOption = document.getElementById("month-value").innerHTML;
-  dayOption = document.getElementById("day-value").innerHTML;
-  console.log("Month Option: ",monthOption);
-  console.log("Day Option: ", dayOption);
-    if (monthOption != "" || dayOption != "") {
-      submitButton.removeAttribute('disabled'); // Enable submit button
+  // When daySel change
+  daySel.onchange = function () {
+    console.log('Month Selected: ', monthSel.value, '| Day Selected: ', daySel.value);
+    // On day selection, check if month and day are not empty strings
+    if (monthSel.value != "" || daySel.value != "") {
+      submitButton.removeAttribute('disabled');
     }
   }
+}
 
 function showValues() {
   event.preventDefault()
@@ -63,19 +49,6 @@ function showValues() {
   console.log(monthStringForm + " " + dayIntForm);
 }
 
-function activateButton() {
-  var monthSel = document.getElementById("month");
-  var daySel = document.getElementById("day");
-  // If non deafult options are selected, then activate submit button
-  // Else, keeep button deactivate (i.e. do nothing)
-  
-
-  // Check on mouse click
-  // Check if month and date are default values
-  // If Month and date are valid options, remove disable submit for html
-  //    If Month != "Month" && Day != "Day"
-  //    document.removeAttr('disabled') for submit button 
-}
 </script>
 </head>   
 <body>
@@ -83,20 +56,7 @@ function activateButton() {
 <h1>Month/Day Selector Form</h1>
 <p>Select your Birthday</p>
 
-<!-- <form name="form1" id="form1" method = "GET" onsubmit="showValues()">
-  <select name="month" id="month">
-          <option value="" selected="selected">Month</option>
-  </select>
-  <select name="day" id="day">
-      <option value="" selected="selected">Day</option>
-  </select>
-    <input type="submit" value="Submit">  
-</form> -->
-<!-- 
-<div>Month</div><div id="month-value"></div>
-<div>Day</div><div id="day-value"></div> -->
-
-<form name="form2" id="form1" method = "GET" onsubmit="showValues()">
+<form name="form2" id="form2" method = "GET" onsubmit="showValues()">
   <select name="month" id="month">
           <option value="" selected="selected">Month</option>
   </select>
