update README and about page with links

--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
         <br>    
         <p>My goal was to create a website that would show a user their "Florida Man Horoscope", which I had learned about years back. A Florida Man Horoscope is created by 
             typing in your date of birth into Google + <a href="http://letmegooglethat.com/?q=Dec+30+florida+man">"Florida Man"</a> and the list of headlines that return are your horoscope. 
-            (Here's an <a href="https://fmanhoroscope.herokuapp.com/random">example</a>.)</p>
+            (Here's an <a href="https://floridaman.onrender.com/random">example</a>.)</p>
         
         <p><b>Origin of the Meme:</b> <a href = "https://knowyourmeme.com/memes/florida-man" target="_blank" rel="noopener noreferrer">Know Your Meme </a></p>
         <p><b>Wikipedia:</b> <a href = "https://en.wikipedia.org/wiki/Florida_Man " target="_blank" rel="noopener noreferrer"> Link</a>
