fix spelling errors

--- a/templates/birthday.html
+++ b/templates/birthday.html
@@ -6,7 +6,7 @@
 
 {% block main %}
 <div class="container">
-    <h3 id = "title">Congrats! Your Flordia Man Horoscopes for {{month}} - {{day}}:</h3>
+    <h3 id = "title">Congrats! Your Florida Man Horoscopes for {{month}} - {{day}}:</h3>
 </div>
 <br>
 <div class="container" id = "results">
