--- a/templates/form.html
+++ b/templates/form.html
@@ -66,8 +66,11 @@ function showValues() {
     <input type="submit" id = "submit-button" value="Submit" disabled="disabled"> 
 </form>
 <br>
-<div>Month</div><div id="month-value"></div><br>
-<div>Day</div><div id="day-value"></div>
+  <div>Month</div>
+  <div id="month-value"></div>
+<br>
+<div>Day</div>
+<div id="day-value"></div>
 
 </body>
 </html>
