--- a/templates/random.html
+++ b/templates/random.html
@@ -7,7 +7,7 @@
 {% block main %}
 
 <div class="container">
-    <h3 id = "title">Flordia Man Horoscopes for {{month}} - {{day}}:</h3>
+    <h3 id = "title">Florida Man Horoscopes for {{month}} - {{day}}:</h3>
 </div>
 <br>
 <div class="container" id = "results">
