add YouTube demo to about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -19,6 +19,7 @@
         
         <p><b>Origin of the Meme:</b> <a href = "https://knowyourmeme.com/memes/florida-man" target="_blank" rel="noopener noreferrer">Know Your Meme </a></p>
         <p><b>Wikipedia:</b> <a href = "https://en.wikipedia.org/wiki/Florida_Man " target="_blank" rel="noopener noreferrer"> Link</a>
+        <p><b>Demo of Website:</b><a href = "https://www.youtube.com/watch?v=ZJLiHFGGbJc&ab_channel=Jugglerman" target = "_blank" rel="noopener noreferrer"> Link </a>
         
         <p>To accomplish this I built a <a href="https://en.wikipedia.org/wiki/Web_scraping" target="_blank" rel="noopener noreferrer"">web-scraper</a> that would search for 'Florida Man' headlines and save the results from every day of the year (including leap year). I put those results into a database and any user can query them while searching the website.</p>
         <p>Tools I used to create website:</p>
